--- a/mean-app/blog/src/app/components/blog/blog.component.html
+++ b/mean-app/blog/src/app/components/blog/blog.component.html
@@ -2,7 +2,7 @@
 
 <div class="constainer">
   
-  <button class="btn btn-info" (click)="scroll(end)">Scroll To End</button><br><br>
+  <button class="btn btn-info" (click)="scroll(end)">Przejdź do końca strony</button><br><br>
 
   <button class="btn btn-warning" (click)="refreshPosts()">Odśwież posty</button>
   
@@ -19,7 +19,7 @@
   </div>
   }
 
-  <button class="btn btn-info" (click)="scroll(top)">Scroll To Top</button>
+  <button class="btn btn-info" (click)="scroll(top)">Wróć na początek strony</button>
   
 </div>
 
