--- a/mean-app/blog/src/app/components/blog-item/blog-item.component.html
+++ b/mean-app/blog/src/app/components/blog-item/blog-item.component.html
@@ -1,5 +1,5 @@
 <div class="box">
-  <button class="btn btn-danger deleteButton" (click)="deletePostF()">Delete</button>
+  <button class="btn btn-danger deleteButton" (click)="deletePostF()">Usuń</button>
   <h5 class="card-title">{{ title }}</h5>
   <blog-item-image [image]="image"></blog-item-image>
   <blog-item-text [text]="text" [id]="id"></blog-item-text>
