--- a/mean-app/blog/src/app/components/login/login.component.html
+++ b/mean-app/blog/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="entry-title"><span>Login:</span></h1>
+    <h1 class="entry-title"><span>Zaloguj się:</span></h1>
     <hr>
     <br>
     <form action="post" autocomplete="off" method="POST">
@@ -12,7 +12,7 @@
                 placeholder="Hasło" title="Password">
         </div><br>
         <button (click)="signIn()" class="btn btn-primary" type="submit" title="Przycisk zaloguj">
-            Sign in
+            Zaloguj
         </button>
     </form>
     @if (error) {
